<resources>
    <string name="app_name">FirstKotlinApp</string>
    <!-- Text -->
    <string name="first_kotlin_app">First Kotlin App</string>
    <string name="home_page">Home Page</string>
    <string name="linear_layout">Linear Layout</string>
    <string name="linear_layout_horizontal">Linear Layout Horizontal</string>
    <string name="linear_layout_vertical">Linear Layout Vertical</string>
    <string name="relative_layout">Relative Layout</string>
    <string name="ui_components">UI Components</string>
    <string name="grid">Grid Layout</string>
    <string name="basic_form">Basic Form</string>
    <string name="enter_name">Enter name:</string>
    <string name="enter_email">Enter Email:</string>
    <string name="enter_msg">Enter Message:</string>
    <string name="form_data">Form Data</string>
    <string name="linear_recyclerView">Linear Recycler View</string>
    <!-- buttons -->
    <string name="hello_btn">Hello to Kotlin App</string>
    <string name="go_btn">Go to next Page</string>
    <string name="linear_btn">Linear Layout</string>
    <string name="relative_btn">Relative Layout</string>
    <string name="ui_components_btn">UI Components</string>
    <string name="chip_2">Chip 2</string>
    <string name="grid_layout">Grid with Linear Layout</string>
    <string name="form_btn">Basic Form</string>
    <string name="send_btn">Send Form Data</string>
    <string name="clear_form">Clear Form Data</string>
    <string name="share_btn">Share Form Data</string>
    <string name="recyclerView_btn">Linear Recycler View</string>
</resources>